--- a/packages/api/functions/package.json
+++ b/packages/api/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "firebase": "^8.9.0",
@@ -21,6 +22,7 @@
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
+    "@types/busboy": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
