--- a/api/functions/package.json
+++ b/api/functions/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^6.12.1",
     "firebase": "^8.9.0",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "@types/busboy": "^0.2.4",
