--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
     "lerna": "^4.0.0",
+    "lodash.set": "^4.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.set": "^4.3.6",
     "@types/react-router-dom": "^5.1.8",
     "commitlint": "^13.1.0",
     "sass": "^1.37.5",
